--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -472,4 +472,8 @@
     <string name="word">我</string>
     <string name="password">请输入密码</string>
     <string name="password_error">输入密码错误，请重新输入</string>
+    <string name="body_temperature">体温异常</string>
+    <string name="mask_standard">请佩戴好口罩</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
