--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -470,6 +470,7 @@
     <string name="Intelligent_temperature">智能测温</string>
     <string name="Temp_mode">测温模式</string>
     <string name="word">我</string>
+    <string name="please_select">请选择切换点</string>
     <string name="password">请输入密码</string>
     <string name="password_error">输入密码错误，请重新输入</string>
     <string name="body_temperature">体温异常</string>
