1、优化自检动画和添加自检功能 2、适配机器人硬件选配时，出现设备空指针问题 3、添加二维码扫描/NFC扫描设备的Module 4、讲解观察者选择切换点时按钮禁用失败问题 5、删除到点之后播报语音的代码 6、将讲解任务队列完全与引领任务队列分割开 7、修改讲解页面重复播报途径内容、观察者在生命周期之外的bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -225,7 +225,7 @@
     <string name="hello_mr_lift">你好呀，电梯先生，我要去%s楼</string>
     <string name="happy_to_spend_the_time_with_you">很开心能与您共同度过这段乘梯时光，如果您需要我的服务，欢迎随时致电酒店前台</string>
     <string name="i_arrived_please_left_front_way_for_me">我到啦，请把前方道路让给我，不要挽留我，拜拜，下次见</string>
-    <string name="i_ready_to_work_excuse_me">我要准备工作了，请让一让</string>
+    <string name="i_ready_to_work_excuse_me">我要准备工作啦</string>
     <string name="going_to">正在前往</string>
     <string name="calling">正在呼叫</string>
     <string name="arrived">已到达</string>
