1、修改过时依赖：dataBinding 2、修改副屏中视频声音控制的方法 3、在副屏中添加视频全屏和自适应宽高的显示、以及是否播放声音的控制 4、修改MQTT文件下载方法 5、添加限制：机器必须对接充电桩才能下发任务 6、修改讲解队列中切换任务点混乱问题 7、SeekBar可为负数的问题 8、添加测温和人脸识别限制：前提是有相对应的硬件设备

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,7 @@
     <string name="error_code">错误编码：%s</string>
     <string name="i_just_distracted">我刚刚走神了</string>
     <string name="i_just_distracted_2">我好像开小差了</string>
-    <string name="you_can_do_this">【您可以进行以下操作】</string>
+    <string name="you_can_do_this">您可以进行以下操作: \n 把我推到充电桩上 \n 确保充电桩前方没有遮挡物</string>
     <string name="you_can_do_this_remind_1">▪ 确保充电桩前方没有遮挡物</string>
     <string name="you_can_do_this_remind_2">▪ 把我推到充电桩上</string>
     <string name="please_try_reboot">请尝试重启</string>
