1、APP检查更新，并更新版本 2、对接上充电桩后，设置机器人位置方式更改 3、读取底盘版本，并上传底盘版本和APP版本号到云平台 4、机器人上传特定的日志/bags文件到云平台 5、讲解过程可进行暂停操作 6、优化：长讲解词的断句 7、优化：讲解词翻页的停顿

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -494,6 +494,8 @@
     <string name="door_temp">门岗测温</string>
     <string name="return_home">回桩</string>
     <string name="finish_explain">结束讲解</string>
+    <string name="pause_explain">暂停讲解</string>
+    <string name="already_explain">已暂停讲解</string>
     <string name="other_point">切换其他点</string>
     <string name="next_point">下一个点</string>
     <string name="mark_point_fail">标记失败,同一楼层的同一个电梯里只能创建一个锚点</string>
