1、修改引领时语言重复播报问题 2、修改点击暂停。并且急停之后，再松开，会顶着暂停页面走的bug 3、添加云平台拉取机器人日志的报文 4、修改成对接充电桩之后才能接收到配置更新的报文，防止丢定位 5、修改设置底盘时间的方法 6、设置mMediaPlayer数据源,从调用prepare()改为prepareAsync()防止线程阻塞 7、添加急停按下的时候语音播报暂停，松开的时候继续 8、修改讲解倒计时结束时的方法 9、设置页面中添加地盘版本信息 10、人脸检测修改成检测到人脸五秒之后才会播报一次语音，注释人脸识别代码 11、轮播图&视频添加加载动画 12、添加讲解结束的二次确认按钮

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -430,6 +430,7 @@
     <string name="model">型号</string>
     <string name="model_number">迪小萌X8</string>
     <string name="System_version">系统版本</string>
+    <string name="Robot_version">机器人版本</string>
     <string name="version_number">V 1.02</string>
     <string name="System_Update">系统更新</string>
     <string name="Enterprise_information">企业信息</string>
@@ -451,6 +452,7 @@
     <string name="no_update">暂未新版本发布，当前已是最新版本</string>
     <string name="Network_anomaly">网络异常</string>
     <string name="Service_Password">输入服务密码</string>
+    <string name="Finish_task_tips">您确定要结束任务吗？</string>
     <string name="Network_anomaly_tips">当前网络异常，请确保网路畅通情况下 进行版本更新，谢谢！</string>
     <string name="Welcome_used">欢迎使用多功能讲解机器人</string>
     <string name="time_hour">17:58</string>
