--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
     <string name="take_object_verification_code">取物验证码</string>
     <string name="take_object_verification_code_reminder">开启后，用户需要输入房间号的数字通过验证才能开仓取物</string>
     <string name="walk_pause_duration">行走暂停限时</string>
-    <string name="wifi_open">WLAN打开</string>
+    <string name="wifi_open">WLAN</string>
     <string name="connected">已连接</string>
     <string name="choose_wifi">选取网络</string>
     <string name="service_phone">服务热线</string>
@@ -507,5 +507,8 @@
     <string name="next_point">下一个点</string>
     <string name="mark_point_fail">标记失败,同一楼层的同一个电梯里只能创建一个锚点</string>
     <string name="you_can_ask_this_questions">您可以问我以下问题</string>
+    <string name="elevator_list_retry" >电梯列表未获取，正在重新获取</string>
+    <string name="elevator_list_request_error" >电梯列表获取失败，请检查网络或平台数据</string>
+    <string name="elevator_array_not_exist">电梯列表未创建</string>
 
 </resources>
