1、修改默认图片 2、导购配置上报时添加绑定的总图名字 3、修改广告配置和机器人配置下载的方法 4、修改围堵页面的显示 5、添加更新配置、地图时的弹窗 6、去掉建图时电梯的获取 7、修改每个版本都展现了一种新风貌的广告屏样式

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -510,5 +510,6 @@
     <string name="elevator_list_retry" >电梯列表未获取，正在重新获取</string>
     <string name="elevator_list_request_error" >电梯列表获取失败，请检查网络或平台数据</string>
     <string name="elevator_array_not_exist">电梯列表未创建</string>
+    <string name="robot_updata_tips">机器人配置更新中…</string>
 
 </resources>
