--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,12 +215,14 @@
     <string name="please_left_the_center_for_me">我是这里的配送机器人，我要进电梯了，麻烦把中间位置让给我，谢谢您的关照</string>
     <string name="excuse_me">麻烦让一让，谢谢</string>
     <string name="can_i_help_you">您好，有什么需要帮助的呢？</string>
+    <string name="welcome_understand">嗨，我是小迪，欢迎前来了解智能服务机器人</string>
+    <string name="welcome_vip_understand">"你好呀 %s，我是小迪，欢迎前来了解智能服务机器人"</string>
     <string name="welcome_i_am_xiao_di">欢迎光临，我是这里的多功能服务机器人，小迪。</string>
     <string name="i_am_going_to_work_if_you_need_my_serve">我现在正要去工作,如果您需要我的服务，欢迎随时致电酒店前台</string>
     <string name="i_hope_to_serve_you">希望我能有一个荣幸的机会来为您服务，小迪会继续努力哒</string>
     <string name="current_volume">当前音量</string>
     <string name="hello_we_are_going_to_please_follow_me">您好，我们正要前往%s%s，请跟我来，要跟紧我哟</string>
-    <string name="hello_we_are_going_to_please_follow_me_1">您好，欢迎来到"中国电信数字化体验中心"，我们正在前往%s</string>
+    <string name="hello_we_are_going_to_please_follow_me_1">您好，我是小迪，我们正在前往%s</string>
     <string name="business_going">正在前往 %s</string>
     <string name="business_doing">正在进行 %s</string>
     <string name="what_is_up">怎么了呀？那我就等你一下吧</string>
