1、升级版本为1.1.1 2、将‘轻应用’名称修改成‘更多服务’ 3、将所有’小迪小迪‘都改成唤醒词 4、上报机器人任务状态的的报文中添加楼层字段 5、补充sql查询充电桩、待命点时漏掉的楼层字段

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,7 +202,7 @@
     <string name="go_to_relocation">前往重定位</string>
     <string name="go_back_charge">返回充电桩</string>
     <string name="clear_all_fix">清除所有修正</string>
-    <string name="start_docking">小迪要开始对接充电桩啦</string>
+    <string name="start_docking">%s要开始对接充电桩啦</string>
     <string name="i_just_was_born">我刚出生不久，动作有点慢，请您包容</string>
     <string name="i_continue_work">我要继续工作啦，拜拜，下次见</string>
     <string name="door_opening_please_put_things">仓门正在开启，请准备放入物品和选择目的点</string>
@@ -215,19 +215,19 @@
     <string name="please_left_the_center_for_me">我是这里的配送机器人，我要进电梯了，麻烦把中间位置让给我，谢谢您的关照</string>
     <string name="excuse_me">麻烦让一让，谢谢</string>
     <string name="can_i_help_you">您好，有什么需要帮助的呢？</string>
-    <string name="welcome_understand">嗨，我是小迪，欢迎前来了解智能服务机器人</string>
+    <string name="welcome_understand">嗨，我是%s，欢迎前来了解智能服务机器人</string>
     <string name="welcome_vip_understand">"您好 %s，我是%s，欢迎前来了解智能服务机器人"</string>
-    <string name="welcome_i_am_xiao_di">欢迎光临，我是这里的多功能服务机器人，小迪。</string>
+    <string name="welcome_i_am_xiao_di">欢迎光临，我是这里的多功能服务机器人，%s。</string>
     <string name="i_am_going_to_work_if_you_need_my_serve">我现在正要去工作,如果您需要我的服务，欢迎随时致电酒店前台</string>
-    <string name="i_hope_to_serve_you">希望我能有一个荣幸的机会来为您服务，小迪会继续努力哒</string>
+    <string name="i_hope_to_serve_you">希望我能有一个荣幸的机会来为您服务，%s会继续努力哒</string>
     <string name="current_volume">当前音量</string>
     <string name="hello_we_are_going_to_please_follow_me">您好，我们正要前往%s%s，请跟我来，要跟紧我哟</string>
-    <string name="hello_we_are_going_to_please_follow_me_1">您好，我是小迪，我们正在前往%s</string>
+    <string name="hello_we_are_going_to_please_follow_me_1">您好，我是%s，我们正在前往%s</string>
     <string name="business_going">正在前往 %s</string>
     <string name="business_doing">正在进行 %s</string>
     <string name="what_is_up">怎么了呀？那我就等你一下吧</string>
     <string name="welcome_to_use_delivery_please_input_password">您好，欢迎使用送物功能，请输入验证密码</string>
-    <string name="xiao_di_serve_you_please_input_room_number">小迪为您服务，请输入要前往的房间号</string>
+    <string name="xiao_di_serve_you_please_input_room_number">%s为您服务，请输入要前往的房间号</string>
     <string name="hello_mr_lift">你好呀，电梯先生，我要去%s楼</string>
     <string name="happy_to_spend_the_time_with_you">很开心能与您共同度过这段乘梯时光，如果您需要我的服务，欢迎随时致电酒店前台</string>
     <string name="i_arrived_please_left_front_way_for_me">我到啦，请把前方道路让给我，不要挽留我，拜拜，下次见</string>
@@ -385,7 +385,7 @@
     <string name="Intelligent_leadership">智能引领</string>
     <string name="Intelligent_explanation">智能讲解</string>
     <string name="Intelligent_QA">智能问答</string>
-    <string name="Light_application">轻应用</string>
+    <string name="Light_application">更多服务</string>
     <string name="business">业务办理</string>
     <string name="Special_explanation">功能模块</string>
     <string name="audio_setup">音频设置</string>
