1、将小屏幕的图片/视频/表情组/横竖文字的重复代码都放到一个类中 2、修改自检文件读取的方法 3、修改导购点名传错，导致数据查询失败的问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -463,7 +463,7 @@
     <string name="Service_Password">输入服务密码</string>
     <string name="Finish_task_tips">您确定要结束任务吗？</string>
     <string name="Network_anomaly_tips">当前网络异常，请确保网路畅通情况下 进行版本更新，谢谢！</string>
-    <string name="Welcome_used">欢迎使用多功能党建机器人</string>
+    <string name="Welcome_used">欢迎使用多功能服务机器人</string>
     <string name="time_hour">17:58</string>
     <string name="month">9月5日</string>
     <string name="week">星期一</string>
