讲解模式设讲解结束不返回充电桩ui更新与数据库操作相关代码

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -518,5 +518,6 @@
     <string name="faceName">%人脸姓名%</string>
     <string name="one_key_call_phone">一键呼叫</string>
     <string name="conversation">智能问答</string>
+    <string name="explain_finish_no_go_back">讲解结束不返回充电桩</string>
 
 </resources>
