--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -520,5 +520,6 @@
     <string name="conversation">智能问答</string>
     <string name="explain_finish_no_go_back">讲解结束不返回充电桩</string>
     <string name="retry_dock">重新对接充电桩</string>
+    <string name="go_back_2">返回中.....</string>
 
 </resources>
